# San-Jiao-Zhou-Zhu-Shou

./: .env.example  README.md  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: client.rs  config.rs  display.rs  main.rs  types.rs
client/: design.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: api.ts  index.css  main.tsx
client/src/api/: admin.ts  client.ts  daily.ts
client/src/components/: Footer.tsx  LocationCard.tsx  NavBar.tsx  SummaryCard.tsx  Toast.tsx
client/src/constants/: defaultData.ts
client/src/hooks/: useAuth.ts  useLocations.ts
client/src/pages/: Admin.tsx  Home.tsx
client/src/pages/admin/: LocationConfig.tsx  LoginForm.tsx  PasswordEntry.tsx
client/src/types/: index.ts
server/: package-lock.json  package.json  tsconfig.json
server-py/: .gitignore  pyproject.toml
server-py/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
server-py/app/ocr/: recognize.py
server-py/app/routes/: admin.py  daily.py
server/src/: auth.ts  db.ts  index.ts  recognize.ts  routes.ts
