[project]
name = "delta-password-server"
version = "0.1.0"
description = "三角洲行动助手后端服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
    "pydantic-settings>=2.0.0",
    "greenlet>=3.5.3",
]

[tool.uv]

[dependency-groups]
dev = []
